--- a/app/src/main/res/layout/popuptermsandconditions.xml
+++ b/app/src/main/res/layout/popuptermsandconditions.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@drawable/gastbybg"
     android:layout_height="match_parent">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_margin="10dp"
+
+
+        android:layout_height="match_parent">
 <RelativeLayout
     android:layout_width="match_parent"
     android:id="@+id/HeadlayoutTermsandConditions"
@@ -11,13 +18,14 @@
        android:text="TERMS AND CONDITIONS"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
+       android:id="@+id/text_head_terms"
        android:textSize="20dp"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content" />
 </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
+
         android:layout_above="@+id/layout_agree_disagree"
         android:layout_below="@+id/HeadlayoutTermsandConditions"
         android:layout_height="match_parent">
@@ -29,7 +37,13 @@
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent"
-                   android:layout_height="wrap_content" />
+                   android:id="@+id/textterms"
+                   android:gravity="center"
+                   android:textSize="17dp"
+                   android:textColor="@color/black"
+                   android:layout_height="wrap_content"
+                   android:layout_margin="10dp"
+                   android:text="@string/lorens_ipsum"/>
 
            </RelativeLayout>
 
@@ -40,8 +54,65 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:id="@+id/layout_agree_disagree"
+        android:layout_margin="5dp"
+
         android:layout_alignParentBottom="true"
-        android:layout_height="100dp">
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:weightSum="2"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="match_parent">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_margin="5dp"
+                    android:id="@+id/DisAgreeButton"
+                    android:background="@color/black"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:gravity="center"
+                        android:padding="10dp"
+                        android:textColor="@color/white"
+                        android:layout_height="match_parent"
+                        android:text="I DISAGREE"
+                        android:id="@+id/textView" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="match_parent">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_margin="5dp"
+                    android:id="@+id/AgreeButton"
+                    android:background="@color/white"
+                    android:layout_height="match_parent">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:gravity="center"
+                        android:background="@drawable/rectangle_1"
+                        android:padding="10dp"
+                        android:textColor="@color/black"
+                        android:layout_height="match_parent"
+                        android:text="I AGREE"/>
+
+                </LinearLayout>
+            </LinearLayout>
+
+        </LinearLayout>
 
     </RelativeLayout>
+</RelativeLayout>
 </RelativeLayout>
