--- a/app/src/main/res/layout/registration_2_layout.xml
+++ b/app/src/main/res/layout/registration_2_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:background="@drawable/bg_splash"
     android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
@@ -46,7 +47,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="30dp"
             android:layout_below="@+id/tribe_image_layout"
             android:layout_height="50dp">
             <android.support.v7.widget.AppCompatSpinner
@@ -76,5 +77,17 @@
         </RelativeLayout>
 
     </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:id="@+id/nextButton"
+        android:layout_alignParentBottom="true"
+        android:layout_height="80dp">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_centerInParent="true"
+            android:id="@+id/register_next"
+            android:src="@drawable/ic_register_next"
+            android:layout_height="wrap_content" />
 
+    </RelativeLayout>
 </RelativeLayout>
